unpackaged/main/default/objects/Case/fields/First_Response_Comment__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Comment__c</fullName>
    <description>Contains the First Response</description>
    <label>First Response Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>