unpackaged/main/default/objects/Case/fields/First_Response_Owner__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Response Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>First_Response_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>