unpackaged/main/default/objects/Case/fields/Follow_up_request_date_time__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_request_date_time__c</fullName>
    <label>Coaching request date/time</label>
    <type>DateTime</type>
</CustomField>