unpackaged/main/default/objects/Case/fields/Has_JIRA__c.field-meta.xml
<CustomField>
    <fullName>Has_JIRA__c</fullName>
    <formula>NOT(ISBLANK( JIRA_Key__c ))</formula>
    <label>Has JIRA</label>
    <type>Checkbox</type>
</CustomField>