unpackaged/main/default/objects/Case/fields/Informed_the_customer__c.field-meta.xml
<CustomField>
    <fullName>Informed_the_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case Field to remind the team to inform the customer that the case is being escalated to T2 Q</description>
    <label>Informed the customer</label>
    <type>Checkbox</type>
</CustomField>