unpackaged/main/default/objects/Case/fields/JIRA_Age__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Age__c</fullName>
    <formula>IF( Has_JIRA__c = TRUE,
                       IF( OR(JIRA_Status__c = &quot;Closed&quot;,JIRA_Status__c = &quot;Resolved&quot;,JIRA_Status__c = &quot;Done&quot;),
                             DATETIMEVALUE(LEFT(JIRA_Last_Updated__c ,19))-DATETIMEVALUE(LEFT( JIRA_Created_Date__c ,19))
                       ,NOW()-DATETIMEVALUE(LEFT( JIRA_Created_Date__c ,19))),-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JIRA Age (Days)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>