unpackaged/main/default/objects/Case/fields/JIRA_Created_Date_DATE__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Created_Date_DATE__c</fullName>
    <formula>IF( Has_JIRA__c,
DATEVALUE(LEFT( JIRA_Created_Date__c , 10)),null)</formula>
    <label>JIRA Created Date (DATE)</label>
    <type>Date</type>
</CustomField>