unpackaged/main/default/objects/Case/fields/Last_Closed_Won_ACV__c.field-meta.xml
<CustomField>
    <fullName>Last_Closed_Won_ACV__c</fullName>
    <description>Once the closed won oppty has been set, it pull the Total ACV</description>
    <label>Last Closed-Won ACV</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>