unpackaged/main/default/objects/Case/fields/Last_Closed_won_New_MRR__c.field-meta.xml
<CustomField>
    <fullName>Last_Closed_won_New_MRR__c</fullName>
    <description>Last Closed-Won Opportunity</description>
    <label>Last Closed-won New MRR</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>