unpackaged/main/default/objects/Case/fields/Last_Closed_Won_Opty__c.field-meta.xml
<CustomField>
    <fullName>Last_Closed_Won_Opty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Requested by Technical Support leadership, it allows linking the most recent closed won oppty to the case.</description>
    <label>Last Closed-Won Opty Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases (Last Closed-Won Opty)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>