unpackaged/main/default/objects/Case/fields/Last_Email_Received__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Received__c</fullName>
    <description>Contains date / time of the last email received.</description>
    <inlineHelpText>Contains date / time of the last email received.</inlineHelpText>
    <label>Last Email Received</label>
    <type>DateTime</type>
</CustomField>