unpackaged/main/default/objects/Case/fields/Last_Email_Received_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Received_Date_Time__c</fullName>
    <label>Last Email Received Date Time</label>
    <type>DateTime</type>
</CustomField>