unpackaged/main/default/objects/Case/fields/Last_Handoff_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Handoff_Time__c</fullName>
    <label>Last Handoff Time</label>
    <type>DateTime</type>
</CustomField>