unpackaged/main/default/objects/Case/fields/Last_Response_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Last_Response_Email_Body__c</fullName>
    <description>Hidden field that stores the email body from the last email sent from the case.  Used for 2x4/2x8 rule apex triggers.</description>
    <label>Last Response Email Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>