unpackaged/main/default/objects/Case/fields/Latest_Comment__c.field-meta.xml
<CustomField>
    <fullName>Latest_Comment__c</fullName>
    <label>Latest Comment</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>