unpackaged/main/default/objects/Case/fields/Monitoring_type__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_type__c</fullName>
    <label>Monitoring type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live Event</fullName>
            </value>
            <value>
                <fullName>Automated</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>