unpackaged/main/default/objects/Case/fields/Multiple_Escalation_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Escalation_Alert_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Escalation Alert Sent</label>
    <type>Checkbox</type>
</CustomField>