unpackaged/main/default/objects/Case/fields/n2de__Is_triggered__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is triggered</label>
    <type>Checkbox</type>
</CustomField>