unpackaged/main/default/objects/Case/fields/n2de__Source_queue__c.field-meta.xml
<CustomField>
    <fullName>n2de__Source_queue__c</fullName>
    <label>Source queue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>