unpackaged/main/default/objects/Case/fields/NeedtoCloseFlag__c.field-meta.xml
<CustomField>
    <fullName>NeedtoCloseFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NeedToCloseFlag</label>
    <type>Checkbox</type>
</CustomField>