unpackaged/main/default/objects/Case/fields/New_Case_From_Closed_Case__c.field-meta.xml
<CustomField>
    <fullName>New_Case_From_Closed_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is checked by NewCaseFromOldCase.</description>
    <label>New Case From Closed Case</label>
    <type>Checkbox</type>
</CustomField>