unpackaged/main/default/objects/Case/fields/New_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>New_Case_Reason__c</fullName>
    <label>BC Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Account Settings</fullName>
            </value>
            <value>
                <fullName>Account Settings - AI</fullName>
            </value>
            <value>
                <fullName>Account Settings - ZC</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Administration - ZC</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Analytics and Billing</fullName>
            </value>
            <value>
                <fullName>API and Custom Dev</fullName>
            </value>
            <value>
                <fullName>API and Custom Dev - ZC</fullName>
            </value>
            <value>
                <fullName>Audience</fullName>
            </value>
            <value>
                <fullName>Audio/Video Quality</fullName>
            </value>
            <value>
                <fullName>Beacon</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Brightcove Campaign</fullName>
            </value>
            <value>
                <fullName>Brightcove Engage</fullName>
            </value>
            <value>
                <fullName>Brightcove Live</fullName>
            </value>
            <value>
                <fullName>Cloud Playout</fullName>
            </value>
            <value>
                <fullName>Content Delivery</fullName>
            </value>
            <value>
                <fullName>CS - Documentation (CS site/ Localization)</fullName>
            </value>
            <value>
                <fullName>CS Portal</fullName>
            </value>
            <value>
                <fullName>Custom Domain/SSL</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Distribution (Social)</fullName>
            </value>
            <value>
                <fullName>Encoding Settings</fullName>
            </value>
            <value>
                <fullName>Engagement Data</fullName>
            </value>
            <value>
                <fullName>Enhancement Request</fullName>
            </value>
            <value>
                <fullName>File Transfers</fullName>
            </value>
            <value>
                <fullName>Gallery</fullName>
            </value>
            <value>
                <fullName>Ingestion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>