unpackaged/main/default/objects/Case/fields/No_Test_Conducted__c.field-meta.xml
<CustomField>
    <fullName>No_Test_Conducted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Test Conducted</label>
    <type>Checkbox</type>
</CustomField>