unpackaged/main/default/objects/Case/fields/NOC_Autoresponse_sent__c.field-meta.xml
<CustomField>
    <fullName>NOC_Autoresponse_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NOC Autoresponse sent</label>
    <type>Checkbox</type>
</CustomField>