unpackaged/main/default/objects/Case/fields/Notice_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Notice_1_Date__c</fullName>
    <label>Notice 1 Date</label>
    <type>Date</type>
</CustomField>