unpackaged/main/default/objects/Case/fields/Notice_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Notice_2_Date__c</fullName>
    <label>Notice 2 Date</label>
    <type>Date</type>
</CustomField>