unpackaged/main/default/objects/Case/fields/Notify_Contact_on_Close_Case__c.field-meta.xml
<CustomField>
    <fullName>Notify_Contact_on_Close_Case__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Notify Contact on Close Case</label>
    <type>Checkbox</type>
</CustomField>