unpackaged/main/default/objects/Case/fields/Owned_New_Comment__c.field-meta.xml
<CustomField>
    <fullName>Owned_New_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>gets flipped to true when the case is owned by a person (not a queue) and has a new comment.</description>
    <inlineHelpText>gets flipped to true when the case is owned by a person (not a queue) and has a new comment.</inlineHelpText>
    <label>Owned New Comment</label>
    <type>Checkbox</type>
</CustomField>