unpackaged/main/default/objects/Case/fields/Owner_Is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_Is_Current_User__c</fullName>
    <formula>IF( Owner:User.Id =  $User.Id , TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Is Current User</label>
    <type>Checkbox</type>
</CustomField>