unpackaged/main/default/objects/Case/fields/Ownership_Changes__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Changes__c</fullName>
    <label>Ownership Changes</label>
    <summaryForeignKey>Case_Ownership_Change__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>