unpackaged/main/default/objects/Case/fields/Plat_Trigger_Time_05_SLA__c.field-meta.xml
<CustomField>
    <fullName>Plat_Trigger_Time_05_SLA__c</fullName>
    <description>This is a trigger set to 55 minute of the SLA time to trigger the Hipchat notification</description>
    <formula>IF(NOT( ISBLANK(Plat_Trigger_Time_SLA__c) ), Plat_Trigger_Time_SLA__c - 0.052083333, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plat Trigger Time 05 SLA</label>
    <type>DateTime</type>
</CustomField>