unpackaged/main/default/objects/Case/fields/PlatTrial_Was_on__c.field-meta.xml
<CustomField>
    <fullName>PlatTrial_Was_on__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to count how many Cases are open during the Platinum Trial</description>
    <label>PlatTrial Was on</label>
    <type>Checkbox</type>
</CustomField>