unpackaged/main/default/objects/Case/fields/Player_Version__c.field-meta.xml
<CustomField>
    <fullName>Player_Version__c</fullName>
    <label>Player Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>New Player</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>