unpackaged/main/default/objects/Case/fields/Priority_Case_Override__c.field-meta.xml
<CustomField>
    <fullName>Priority_Case_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Case Override</label>
    <type>Checkbox</type>
</CustomField>